--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <aside class="aside grid" id="aside">
         <div class="aside__btns flex">
             <button class="btn btn__small" id="btn__menu"><svg width="1.5rem" height="1.5rem"><use href="#sidebar"></use></svg></button>
-            <a class="btn btn__small" href="#module__1"><svg width="1.5rem" height="1.5rem"><use href="#skip"></use></svg></a>
+            <a aria-label="skip navegation" class="btn btn__small" href="#module__1"><svg width="1.5rem" height="1.5rem"><use href="#skip"></use></svg></a>
             <a class="btn btn__large" href="./index.html"><svg width="1.5rem" height="1.5rem"><use href="#home"></use></svg>Home</a>
         </div>  
         <nav class="nav">
@@ -49,7 +49,7 @@
     </aside>
     <main class="main" id="main">
         <section class="module">
-            <h2 class="class module__title" id="module__1" data-description="Insert text in HTML element">Person</h2>
+            <h2 class="class module__title" id="module__1" data-description="Insert text in HTML element">Person<a aria-label="skip navegation" class="btn btn__small" href="#module__1"><svg width="1.5rem" height="1.5rem"><use href="#skip"></use></svg>skip</a></h2>
             <div class="module__content">
                 <div id="card__person"></div>
             </div>
