--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <meta name="description" content="Practice with JavaScript modules examples">
     <svg class="icons">
         <symbol id="home" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path d="M5.57144 23C4.46687 23 3.57144 22.1046 3.57144 21V14.6429H3.00001C2.20362 14.6429 1.48312 14.1704 1.16572 13.44C0.848317 12.7095 0.994509 11.8604 1.5379 11.2782L10.5379 1.63536C10.9162 1.23009 11.4457 1 12 1C12.5544 1 13.0839 1.23009 13.4621 1.63536L22.4621 11.2782C23.0055 11.8604 23.1517 12.7095 22.8343 13.44C22.5169 14.1704 21.7964 14.6429 21 14.6429H20.4286V21C20.4286 22.1046 19.5332 23 18.4286 23H15C13.8954 23 13 22.1046 13 21V16.5714H11V21C11 22.1046 10.1046 23 9.00001 23H5.57144ZM9.00001 14.5714H15V21H18.4286V12.6429H21L12 3L3.00001 12.6429H5.57144V21H9.00001V14.5714Z"/>
@@ -32,16 +33,17 @@
     </header>
     <aside class="aside grid" id="aside">
         <div class="aside__btns flex">
-            <button class="btn btn__small" id="btn__menu"><svg width="1.5rem" height="1.5rem"><use href="#sidebar"></use></svg></button>
+            <button aria-label="toggle sidebar" class="btn btn__small" id="btn__menu"><svg width="1.5rem" height="1.5rem"><use href="#sidebar"></use></svg></button>
             <a aria-label="skip navegation" class="btn btn__small" href="#module__1"><svg width="1.5rem" height="1.5rem"><use href="#skip"></use></svg></a>
             <a class="btn btn__large" href="./index.html"><svg width="1.5rem" height="1.5rem"><use href="#home"></use></svg>Home</a>
-        </div>  
+        </div> 
         <nav class="nav">
-            <h3 class="aside__title">Contents Table</h3>
+            <h2 class="aside__title">Contents Table</h2>
             <ul class="list" id="list">
                 <template id="template__contents">
                     <li class="list__item">
                         <a class="list__link" href=""></a>
+                        <p class="list__description"></p>
                     </li>
                 </template>
             </ul>
@@ -49,13 +51,13 @@
     </aside>
     <main class="main" id="main">
         <section class="module">
-            <h2 class="class module__title" id="module__1" data-description="Insert text in HTML element">Person<a aria-label="skip navegation" class="btn btn__small" href="#module__1"><svg width="1.5rem" height="1.5rem"><use href="#skip"></use></svg>skip</a></h2>
+            <h3 class="class module__title" id="module__1" data-description="Insert text in HTML element">Person</h3>
             <div class="module__content">
                 <div id="card__person"></div>
             </div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__2" data-description="Move with Keyboard">Playground</h2>
+            <h3 class="class module__title" id="module__2" data-description="Move with Keyboard">Playground</h3>
             <div class="module__content">
                 <div class="playground" id="playground">
                     <div class="ball" id="ball"></div>
@@ -63,39 +65,39 @@
             </div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__3" data-description="Create a Clock and Alarm">Watch</h2>
+            <h3 class="class module__title" id="module__3" data-description="Create a Clock and Alarm">Watch</h3>
             <div class="module__content">
                 <div class="clock__wrapper grid">
                     <div class="clock">
-                        <h3 class="clock__title">Time</h3>
+                        <h4 class="clock__title">Time</h4>
                         <div class="clock__hour" id="clock__hour">00:00:00</div>
                     </div>
                     <div class="clock__btns flex">
-                        <button class="btn btn__small" id="clock__on"><svg width="1.5rem" height="1.5rem"><use href="#play"></use></svg></button>
-                        <button class="btn btn__small" id="clock__off"><svg width="1.5rem" height="1.5rem"><use href="#pause"></use></svg></button>
+                        <button aria-label="Turn on clock" class="btn btn__small" id="clock__on"><svg width="1.5rem" height="1.5rem"><use href="#play"></use></svg></button>
+                        <button aria-label="Turn on clock" class="btn btn__small" id="clock__off"><svg width="1.5rem" height="1.5rem"><use href="#pause"></use></svg></button>
     
-                        <button class="btn btn__small" id="alarm__on"><svg width="1.5rem" height="1.5rem"><use href="#play"></use></svg></button>
-                        <button class="btn btn__small" id="alarm__off"><svg width="1.5rem" height="1.5rem"><use href="#pause"></use></svg></button>
+                        <button aria-label="Turn on alarm" class="btn btn__small" id="alarm__on"><svg width="1.5rem" height="1.5rem"><use href="#play"></use></svg></button>
+                        <button aria-label="Turn off alarm" class="btn btn__small" id="alarm__off"><svg width="1.5rem" height="1.5rem"><use href="#pause"></use></svg></button>
                     </div>
                 </div>
             </div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__4" data-description="Countdown with Date">Countdown</h2>
+            <h3 class="class module__title" id="module__4" data-description="Countdown with Date">Countdown</h3>
             <div class="module__content">
                 <div id="countdown"></div>
             </div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__5">Module 5</h2>
+            <h3 class="class module__title" id="module__5">Module 5</h3>
             <div class="module__content"></div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__6">Module 6</h2>
+            <h3 class="class module__title" id="module__6">Module 6</h3>
             <div class="module__content"></div>
         </section>
         <section class="module">
-            <h2 class="class module__title" id="module__7">Module 7</h2>
+            <h3 class="class module__title" id="module__7">Module 7</h3>
             <div class="module__content"></div>
         </section>
     </main>
