--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         </div> 
         <nav class="nav">
             <h2 class="aside__title">Contents Table</h2>
-            <ul class="list" id="list">
+            <dl class="list" id="list">
                 <template id="template__contents">
-                    <li class="list__item">
+                    <dt class="list__item">
                         <a class="list__link" href=""></a>
-                        <p class="list__description"></p>
-                    </li>
+                    </dt>
+                    <dd class="list__description"></dd>
                 </template>
-            </ul>
+            </dl>
         </nav>
     </aside>
     <main class="main" id="main">
